crates/symbolicator-proguard/tests/integration/snapshots/integration__proguard__compose_stacktrace_group_keys.snap
---
source: crates/symbolicator-proguard/tests/integration/proguard.rs
expression: response
---
exceptions:
  - type: DiagnosticComposeException
    module: androidx.compose.runtime.tooling
stacktraces:
  - exception:
      type: DiagnosticComposeException
      module: androidx.compose.runtime.tooling
    frames:
      - function: animateFloatAsState
        filename: AnimateAsState.kt
        module: androidx.compose.animation.core.AnimateAsStateKt
        abs_path: AnimateAsState.kt
        lineno: 71
        index: 0
      - function: animateFloatAsState
        filename: AnimateAsState.kt
        module: androidx.compose.animation.core.AnimateAsStateKt
        abs_path: AnimateAsState.kt
        lineno: 73
        index: 1
classes: {}
errors: []
