crates/symbolicator-proguard/tests/integration/snapshots/integration__proguard__remap_exception.snap
---
source: crates/symbolicator-proguard/tests/integration/proguard.rs
assertion_line: 133
expression: response
---
exceptions:
  - type: Util$ClassContextSecurityManager
    module: org.slf4j.helpers
stacktraces: []
errors: []
